# axum-session-server

./: Cargo.toml  README.md
src/: main.rs
templates/: base.html  dashboard.html  home.html  login.html  signup.html
