[package]
name = "axum-session-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = "0.14.0"
async-trait = "0.1.88"
axum = "0.8.4"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
tower-sessions = "0.14.0"
uuid = { version = "1.17.0", features = ["v4"] }
