[package]
name = "axum-session-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework - fast and ergonomic
axum = "0.7"
# Async runtime - required for axum
tokio = { version = "1.0", features = ["full"] }
# Session management
tower-sessions = "0.12"
# Password hashing - secure and modern
argon2 = "0.5"
# HTML templating - compile-time templates
askama = "0.12"
# HTTP types
http = "1.0"
# For generating session IDs
uuid = { version = "1.0", features = ["v4"] }
# Serialization for session data
serde = { version = "1.0", features = ["derive"] }
# Async traits
async-trait = "0.1"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
# Testing utilities for Axum
axum-test = "14.0"
# HTTP body utilities for testing
http-body-util = "0.1"
# Testing framework
tokio-test = "0.4"
